--- a/questions.html
+++ b/questions.html
@@ -13,7 +13,7 @@
 
         <main>
             <section id="quiz-box">
-                <h2 id="question">---</h2>
+                <h2 id="question">Loading...</h2>
 
                 <input class="choice" type="button" value="True">
                 <br>
@@ -25,6 +25,7 @@
             </section>
 
             <section>
+                <input type="button" id="restart" value="Restart">
                 <input type="button" id="next" value="Next Question">
             </section>
         </main>
